--- a/themes/sagiri/source/css/_schemes/Pisces/_layout.styl
+++ b/themes/sagiri/source/css/_schemes/Pisces/_layout.styl
@@ -236,3 +236,14 @@ a {
       transform: scale(1.1);
     }
 }
+
+#weather{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99999;
+    background: rgba(125,137,95,0.1);
+    pointer-events: none;
+}
