Change assets source file

--- a/themes/sagiri/source/css/_schemes/Pisces/_mai.styl
+++ b/themes/sagiri/source/css/_schemes/Pisces/_mai.styl
@@ -8,7 +8,7 @@ $darling-red    = #ff3f1a
   }
 
   .site-brand-wrapper {
-    background-image: url(https://cdn.jsdelivr.net/gh/abozanona/abozanona.me/images/header-mai.jpg) !important;
+    background-image: url(https://cdn.jsdelivr.net/gh/abozanona/me.abozanona/images/header-mai.jpg) !important;
     background-position: center top ;
   }
 
