--- a/themes/sagiri/source/css/_mixins/base.styl
+++ b/themes/sagiri/source/css/_mixins/base.styl
@@ -119,6 +119,6 @@ clearfix() {
 
 @font-face {
   font-family: 'Candyshop';
-  src: url(https://cdn.jsdelivr.net/gh/abozanona/abozanona.me/fonts/Candyshop.otf);
+  src: url(https://cdn.jsdelivr.net/gh/abozanona/me.abozanona/fonts/Candyshop.otf);
   font-display: swap;
 }
