Remove deployment jar.

--- a/themes/sagiri/source/css/_schemes/Pisces/_layout.styl
+++ b/themes/sagiri/source/css/_schemes/Pisces/_layout.styl
@@ -1,6 +1,6 @@
 body {
   background: #efefef;
-  cursor: url('https://cdn.jsdelivr.net/gh/abozanona/me.abozanona/images/cursor.ico'), auto;
+  cursor: url('https://cdn.jsdelivr.net/gh/abozanona/me.abozanona/themes/sagiri/source/images/cursor.ico'), auto;
 }
 
 .header {
